fix se-link text wrap (issue #68)

--- a/src-core/src/components/widget-footer/widget-footer.scss
+++ b/src-core/src/components/widget-footer/widget-footer.scss
@@ -14,6 +14,11 @@
     @include flex();
   }
 }
+
 :host(.card){
   border-top: none;
+}
+
+:host(.column) {
+  @include flex-direction(column);
 }
